# doc_classifier

./: .gitignore  Dockerfile  README.md  checkid_0_1_create_dataset.ipynb  lambda_function.py  pyproject.toml  requirements.txt  run_api.py  test_api.py
.ipynb_checkpoints/: checkid_0_1_create_dataset-checkpoint.ipynb
api/: main.py
api/objects/: output.py
api/predictor/: make_prediction.py
api/predictor/resources/: model_v2
doc_classifier/: main.py
doc_classifier/objects/: output.py
doc_classifier/predictor/: make_prediction.py
doc_classifier/predictor/resources/model_v1/: keras_metadata.pb
doc_classifier/predictor/resources/model_v1/variables/: variables.index
doc_classifier/predictor/resources/model_v6/: saved_model.pb
doc_classifier/predictor/resources/model_v8/: keras_metadata.pb  saved_model.pb
doc_classifier/predictor/resources/model_v8/variables/: variables.index
experiments/: steps.txt  test_api.py
notebooks/: train_document_classifier.ipynb
