[tool.poetry]
name = "doc_classifier"
version = "0.1.0"
description = "A API for document classification"
authors = ["vinybrasil <vinicyusbrasil1@hotmail.com>"]

[tool.poetry.dependencies]
python = "*"
tensorflow = "*"
fastapi = "*"
numpy = "1.23.1"
Pillow = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
